--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-register": "^6.18.0",
     "browser-sync": "^2.18.6",
     "chai": "^3.5.0",
+    "chalk": "^1.1.3",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.6.1",
