--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"A commercial site for a local smoke shop\"",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "webpack --config ./webpack.config.babel.js",
+    "start": "node server.js"
   },
   "author": "Forrest Collins",
   "license": "MIT",
